Fix fade overlay overlapping navbar
Also added comments to the code to help explain it.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Pie on the Fly website style */
 html{
   --purple:#4b2156;
   --orange:#f8b55f;
@@ -24,7 +25,7 @@ body{
   background:linear-gradient(#aa4fc2e0,#4b2156e0);
   box-shadow:0 2px 2px #0008;
   backdrop-filter:blur(2px);
-  z-index:1;
+  z-index:2;
 }
 .top-bar img{
   cursor:pointer;
